[FIX] stock: make Overview kanban cards autosize
The current hardcoded column values for the Inventory Overview kanban
card links make it so if the text or the number exceeds its column's
width, the text will overlap with each other. In some cases, this
resulted in translations overlapping with single digit numbers.

This commit redoes the design to make the columns dynamically resize on
their own based on the lengths of these texts so that this overlap no
longer happens. Note that this means:
- the column will go under the buttons in the card view in smaller
  windows and/or when the text is long and/or when grouping by Type
  of Operation in some cases
- the card now has behavior more similar to the overview in accounting
  for the sizing of this column

Redesign takes into account:
- the graph should always be aligned to bottom of card
- the height of the cards should be consistent regardless of number of
  card links (i.e. inconsistent number of links per card = same height
  for all cards)

Task: 5155629

--- a/addons/stock/static/src/scss/stock_overview.scss
+++ b/addons/stock/static/src/scss/stock_overview.scss
@@ -12,8 +12,11 @@
         margin-left: 4px;
         margin-right: 4px;
     }
-}
 
-.stock-overview-links {
-    height: 5.5rem;
+    // ensure graphs stay aligned to bottom
+    .container-fluid {
+        flex: 1 0 auto;
+        display: flex;
+        flex-flow: column nowrap;
+    }
 }
